# mnemex

./: .gitignore  CLAUDE.md  README.md  TODOS.md  pyproject.toml
.github/workflows/: jsonl-export.yml
data/: README.md
docs/: MNEMEX-design-2026-05-04.md  supabase-rls-policies.md  supabase-setup.md
mnemex/: __init__.py  cli.py  errors.py  identity.py  ingestion_runs.py  schema.py  store.py
mnemex/export/: __init__.py
mnemex/ingest/: __init__.py  stihl.py
mnemex/migrations/: 20260504_001_initial_schema.sql  README.md
mnemex/strathmark_adapter/: __init__.py  http.py  jsonl.py  supabase.py  tier1.py  tier2.py  tier3.py
tests/: conftest.py  test_identity.py  test_ingestion_runs.py  test_schema.py  test_store_supabase.py  test_strathmark_contract.py  test_supabase_schema.py
tests/fixtures/college_excel/: awfc-2024-master.xlsx  awfc-conclave-csu-2025.xlsx  um-pro-am-2026.xlsx
